feat: mark home page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year 2024</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
-    <div>Hello!</div>
+    <div class="background">
+    </div>
+        <header class="header">
+            <div class="container header-container">
+                <h1 class="header-title">Могучие шарики</h1>
+                <h2 class="header-subtitle">Ккк - Команда!!!</h2>
+            </div>
+        </header>
+        <main class=" container main-container">
+            <div class="section-container team-section"></div>
+            <div class="section-container round-section">
+                <div class="game">
+                    <a href="#" class="link round-link">round 1</a>
+                </div>
+                <div class="game">
+                    <a href="#" class="link round-link">round 2</a>
+                </div>
+                <div class="game">
+                    <a href="#" class="link round-link">round 3</a>
+                </div>
+                <div class="game">
+                    <a href="#" class="link round-link">round 4</a>
+                </div>
+                <div class="game">
+                    <a href="#" class="link round-link">round 5</a>
+                </div>
+                <div class="game">
+                    <a href="#" class="link round-link">round 6</a>
+                </div>
+            </div>
+            <div class="section-container team-section"></div>
+        </main>
+        <footer class="footer">
+            <div class="container footer-container">
+            </div>
+        </footer>
+    
+
 </body>
+
 </html>
