docs: add develop plan

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="container header-container">
                 <h1 class="header-title">Могучие шарики</h1>
-                <h2 class="header-subtitle">Ккк - Команда!!!</h2>
+                <h2 class="header-subtitle">Мы - Команда!!!</h2>
             </div>
         </header>
         <main class=" container main-container">
