feat: add round button functionality, add home page link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
         <header class="header">
             <div class="container header-container">
+                <a href="index.html" class="link home-link"></a>
                 <h1 class="header-title">Могучие шарики</h1>
                 <h2 class="header-subtitle">Мы - Команда!!!</h2>
             </div>
@@ -20,22 +21,28 @@
             <div class="section-container team-section"></div>
             <div class="section-container round-section">
                 <div class="game">
-                    <a href="#" class="link round-link">round 1</a>
+                    <a href="/party-game/pages/round-1.html" class="link round-link"></a>
+                    <p class="round-item">round 1</p>
                 </div>
                 <div class="game">
-                    <a href="#" class="link round-link">round 2</a>
+                    <a href="#" class="link round-link"></a>
+                    <p class="round-item">round 2</p>
                 </div>
                 <div class="game">
-                    <a href="#" class="link round-link">round 3</a>
+                    <a href="#" class="link round-link"></a>
+                    <p class="round-item">round 3</p>
                 </div>
                 <div class="game">
-                    <a href="#" class="link round-link">round 4</a>
+                    <a href="#" class="link round-link"></a>
+                    <p class="round-item">round 4</p>
                 </div>
                 <div class="game">
-                    <a href="#" class="link round-link">round 5</a>
+                    <a href="#" class="link round-link"></a>
+                    <p class="round-item">round 5</p>
                 </div>
                 <div class="game">
-                    <a href="#" class="link round-link">round 6</a>
+                    <a href="#" class="link round-link"></a>
+                    <p class="round-item">round 6</p>
                 </div>
             </div>
             <div class="section-container team-section"></div>
