feat: add listener to second team counter

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
                     <p class="round-item">round 6</p>
                 </div>
             </div>
-            <div class="section-container team-section"></div>
+            <div class="section-container team-section">
+                <p class = "team-name-container team-2"><span class="textarea" role="textbox" contenteditable></span></p>
+                <div class="points-container" id="points-container-2">
+                <p class="team-points" id="team-points-2">0</p>
+                <button class="counter-button button-minus" id="button-minus-2" data-action="subtract"></button>
+                <button class="counter-button button-plus" id="button-plus-2" data-action="add"></button>
+                </div>
+            </div>
         </main>
         <footer class="footer">
             <div class="container footer-container">
