feat: save input value to LocalStorage, get LocalStorage value on reload

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <main class=" container main-container">
             <div class="section-container team-section">
-                <p class = "team-name-container team-1"><span class="textarea" role="textbox" contenteditable></span></p>
+                <p class = "team-name-container team-1" id="team-1"><span class="textarea" role="textbox" id="team-1-name" contenteditable></span></p>
                 <div class="points-container" id="points-container">
                 <p class="team-points" id="team-points">0</p>
                 <button class="counter-button button-minus" id="button-minus" data-action="subtract"></button>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="section-container team-section">
-                <p class = "team-name-container team-2"><span class="textarea" role="textbox" contenteditable></span></p>
+                <p class = "team-name-container team-2" id="team-2"><span class="textarea" role="textbox" id="team-2-name" contenteditable></span></p>
                 <div class="points-container" id="points-container-2">
                 <p class="team-points" id="team-points-2">0</p>
                 <button class="counter-button button-minus" id="button-minus-2" data-action="subtract"></button>
