--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,66 +9,67 @@
     <link rel="icon" href="assets/favicon.ico">
     <script type="text/javascript" src="script.js"></script>
 </head>
+
 <body>
     <div class="background">
     </div>
-        <header class="header">
-            <div class="container header-container">
-                <a href="index.html" class="link home-link"></a>
-                <h1 class="header-title">могучие шарики</h1>
-                <h2 class="header-subtitle">мы - команда!!!</h2>
-            </div>
-        </header>
-        <main class=" container main-container">
-            <div class="section-container team-section">
-                <p class = "team-name-container team-1" id="team-1"><span class="textarea" role="textbox" id="team-1-name" contenteditable></span></p>
-                <div class="points-container" id="points-container">
+    <header class="header">
+        <div class="container header-container">
+            <a href="index.html" class="link home-link"></a>
+            <h1 class="header-title">могучие шарики</h1>
+            <h2 class="header-subtitle">мы - команда!!!</h2>
+        </div>
+    </header>
+    <main class=" container main-container">
+        <div class="section-container team-section">
+            <p class="team-name-container team-1" id="team-1"><span class="textarea" role="textbox" id="team-1-name"
+                    contenteditable></span></p>
+            <div class="points-container" id="points-container">
                 <p class="team-points" id="team-points">0</p>
                 <button class="counter-button button-minus" id="button-minus" data-action="subtract"></button>
                 <button class="counter-button button-plus" id="button-plus" data-action="add"></button>
-                </div>
             </div>
-            <div class="section-container round-section">
-                <div class="game">
-                    <a href="/party-game/pages/round-1.html" class="link round-link"></a>
-                    <p class="round-item">round 1</p>
-                </div>
-                <div class="game">
-                    <a href="#" class="link round-link"></a>
-                    <p class="round-item">round 2</p>
-                </div>
-                <div class="game">
-                    <a href="#" class="link round-link"></a>
-                    <p class="round-item">round 3</p>
-                </div>
-                <div class="game">
-                    <a href="#" class="link round-link"></a>
-                    <p class="round-item">round 4</p>
-                </div>
-                <div class="game">
-                    <a href="#" class="link round-link"></a>
-                    <p class="round-item">round 5</p>
-                </div>
-                <div class="game">
-                    <a href="#" class="link round-link"></a>
-                    <p class="round-item">round 6</p>
-                </div>
+        </div>
+        <div class="section-container round-section">
+            <div class="game">
+                <a href="/party-game/pages/round-1.html" class="link round-link"></a>
+                <p class="round-item">round 1</p>
             </div>
-            <div class="section-container team-section">
-                <p class = "team-name-container team-2" id="team-2"><span class="textarea" role="textbox" id="team-2-name" contenteditable></span></p>
-                <div class="points-container" id="points-container-2">
+            <div class="game">
+                <a href="#" class="link round-link"></a>
+                <p class="round-item">round 2</p>
+            </div>
+            <div class="game">
+                <a href="#" class="link round-link"></a>
+                <p class="round-item">round 3</p>
+            </div>
+            <div class="game">
+                <a href="#" class="link round-link"></a>
+                <p class="round-item">round 4</p>
+            </div>
+            <div class="game">
+                <a href="#" class="link round-link"></a>
+                <p class="round-item">round 5</p>
+            </div>
+            <div class="game">
+                <a href="#" class="link round-link"></a>
+                <p class="round-item">round 6</p>
+            </div>
+        </div>
+        <div class="section-container team-section">
+            <p class="team-name-container team-2" id="team-2"><span class="textarea" role="textbox" id="team-2-name"
+                    contenteditable></span></p>
+            <div class="points-container" id="points-container-2">
                 <p class="team-points" id="team-points-2">0</p>
                 <button class="counter-button button-minus" id="button-minus-2" data-action="subtract"></button>
                 <button class="counter-button button-plus" id="button-plus-2" data-action="add"></button>
-                </div>
             </div>
-        </main>
-        <footer class="footer">
-            <div class="container footer-container">
-            </div>
-        </footer>
-    
-
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container footer-container">
+        </div>
+    </footer>
 </body>
 
 </html>
