--- a/pages/round-1.html
+++ b/pages/round-1.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Round 1</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../assets/favicon.ico">
 </head>
 <body>
-    Round 1
+    <body>
+        <div class="background">
+        </div>
+        <header class="header">
+            <div class="container header-container">
+                <a href="../index.html" class="link home-link"></a>
+                <h1 class="header-title">могучие шарики</h1>
+                <h2 class="header-subtitle">мы - команда!!!</h2>
+            </div>
+        </header>
+        <main class=" container quiz-container">
+                <div class="quiz-window">
+                    <button class="slider-button prev"></button>
+                    <ul class="question-container">
+                        <li class="question-item">
+                            <img src="../assets/img/quiz/quiz-start.jpg" alt="quiz-start" class="slide quiz-start" id="quiz-start"></img>
+                        </li>
+                        <li class="question-item">
+                            <img src="../assets/img/quiz/question-1.jpg" alt="question-1" class="slide question-1" id="question-1"></img>
+                        </li>
+                    </ul>
+                    <button class="slider-button next"></button>
+                </div>
+                <div class="timer">1234</div>
+        </main> 
+    </body>
 </body>
 </html>
