feat: add stopwatch functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>New Year 2024</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
 </head>
 
 <body>
